--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -6,20 +6,29 @@
 {% endblock %}
 
 {% block web %}
-	<!-- 🍺 css 开始 -->{% block css %}{% endblock %}	<!-- 🍻 css 结束 -->
+    <!-- 🍺 css 开始 -->{% block css %}{% endblock %}
+    <!-- 🍻 css 结束 -->
 </head>
-<body>
-	<!-- 🍺 内容 开始 -->{% block body %}{% endblock %}	<!-- 🍻 内容 结束 -->
 
-	<!-- 🍺 js 开始 -->{% block js %}
-	<!-- base_quick -->
-	<!-- Django -->
-	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdn.bootcss.com/js-cookie/2.1.4/js.cookie.js"></script>
-	<script src="{% static 'railguns/js/django.js' %}"></script>
-	<!-- libs -->
-	<script src="https://cdn.bootcss.com/jquery.lazy/1.7.5/jquery.lazy.min.js"></script>
-	<script src="https://cdn.bootcss.com/handlebars.js/4.0.8/handlebars.min.js"></script>
-	<script src="{% static 'railguns/js/libs.js' %}"></script>
-	{% endblock %}	<!-- 🍻 js 结束 -->
+<body class="mdc-typography">
+    <!-- 🍺 内容 开始 -->{% block body %}{% endblock %}
+    <!-- 🍻 内容 结束 -->
+
+    <!-- 🍺 js 开始 -->{% block js %}
+    <!-- 💙 base_quick -->
+    <!-- Django -->
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/js-cookie/latest/js.cookie.min.js"></script>
+    <script src="{% static 'railguns/js/django.js' %}"></script>
+    <!-- libs -->
+    <script src="https://unpkg.com/vue{% if not debug %}/dist/vue.min.js{% endif %}"></script>
+    <script src="https://unpkg.com/axios/dist/axios{% if not debug %}.min{% endif %}.js"></script>
+    <!--  -->
+    <script src="https://cdn.bootcss.com/clipboard.js/1.7.1/clipboard.min.js"></script>
+    <script src="https://cdn.bootcss.com/geopattern/1.2.3/js/geopattern.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery.lazy/1.7.6/jquery.lazy.min.js"></script>
+    <!--  -->
+    <script src="{% static 'railguns/js/libs.js' %}"></script>
+    {% endblock %}
+    <!-- 🍻 js 结束 -->
 {% endblock %}
