--- a/railguns/templates/railguns/mdc/collection_list.html
+++ b/railguns/templates/railguns/mdc/collection_list.html
@@ -2,27 +2,26 @@
 {% block structure %}{{ block.super }}<!--         mdc/collection_list -->
 {% endblock %}
 
-{% block template %}{% verbatim %}
-<!-- 示例模版 开始 -->
-{{#results}}
-<li class="mdc-grid-tile">
-	<div class="mdc-card">
-		<section class="mdc-card__media" style="background-image: url(//test-static-plus-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/demo/pic_{{id}}.jpg)">
-		</section>
-		<section class="mdc-card__primary">
-			<h1 class="mdc-card__title mdc-card__title--large">标题</h1>
-			<h2 class="mdc-card__subtitle">副标题</h2>
-		</section>
-		<section class="mdc-card__actions">
-			<a class="mdc-button mdc-button--compact mdc-card__action"
-				href="/m/projects/{{id}}/">Read more</a>
-		</section>
-	</div>
-</li>
-{{/results}}
-<!-- 示例模版 结束 -->
-{% endverbatim %}{% endblock %}
-
 {% block list %}<div class="mdc-grid-list">
-			<ul class="mdc-grid-list__tiles" data-endpoint="{{ endpoint }}" id="list"></ul>
-		</div>{% endblock %}
+            {% block list_header %}<list-header></list-header>{% endblock %}
+            <ul class="mdc-grid-list__tiles">
+               {% block item %}<li class="mdc-grid-tile" v-for="(item, index) in items">
+                   <small-card :title="index" action="按钮"></small-card>
+               </li>{% endblock %}
+            </ul>
+            {% block list_footer %}<list-footer title="底部自定义内容"></list-footer>{% endblock %}
+        </div>{% endblock %}
+
+{% block framework_js %}{{ block.super }}    <!-- 💙 mdc/collection_list -->
+    <script>
+        function initGridList() { // 居中网格
+            let nodes = document.querySelectorAll('.mdc-grid-list')
+            for (let node of nodes) {
+                mdc.gridList.MDCGridList.attachTo(node)
+            }
+        }
+        setTimeout(function() {
+            initGridList()
+        }, 100)
+    </script>
+{% endblock %}
