--- a/railguns/templates/railguns/mdc/collection_list.html
+++ b/railguns/templates/railguns/mdc/collection_list.html
@@ -9,7 +9,7 @@
                    <small-card :title="index" action="按钮"></small-card>
                </li>{% endblock %}
             </ul>
-            {% block list_footer %}<list-footer title="底部自定义内容"></list-footer>{% endblock %}
+            {% block list_footer %}<list-footer title=""></list-footer>{% endblock %}
         </div>{% endblock %}
 
 {% block framework_js %}{{ block.super }}    <!-- 💙 mdc/collection_list -->
