--- a/railguns/templates/railguns/mdc/form/check_list_update.html
+++ b/railguns/templates/railguns/mdc/form/check_list_update.html
@@ -1,15 +1,19 @@
-{% extends '../base.html' %}
+{% extends '../grouped_table_detail.html' %}
 {% load static %}
 {% block structure %}{{ block.super }}<!--           mdc/form/check_list_update -->
 {% endblock %}
 
-{% block menu %}<menu-item name="done" title="done"></menu-item>{% endblock %}
+{% block menu %}<menu-item icon="done" title="done"></menu-item>{% endblock %}
 
-{% block content %}
-<h3 class="mdc-list-group__subheader">&#xA0;</h3>
+{% block items %}
+            <h3 class="mdc-list-group__subheader">&#xA0;</h3>
             <hr class="mdc-list-divider">
-            <ul>
-                <list-item-default v-for="item in items" :title="item.label" :key="item.value"></list-item-default>
+            <ul class="mdc-list">
+                <list-item-default v-for="item in items" :key="item.value"
+                    :title="item.label"
+                    accessory="radio_button_unchecked"
+                    uri="#"
+                    :datavalue="item.value"></list-item-default>
             </ul>
             <hr class="mdc-list-divider">{% endblock %}
 
