--- a/railguns/templates/railguns/mdc/grouped_table_detail.html
+++ b/railguns/templates/railguns/mdc/grouped_table_detail.html
@@ -7,7 +7,7 @@
             <ul class="mdc-list mdc-list--avatar-list">
                 <list-item-value1 icon="https://material-components-web.appspot.com/images/animal3.svg" title="id" :subtitle="data.id"></list-item-value1>
             </ul>
-            <hr class="mdc-list-divider">
+            <list-divider></list-divider>
             <h3 class="mdc-list-group__subheader">List 2</h3>
             <ul class="mdc-list mdc-list--avatar-list">
                 <list-item-value1 icon="https://material-components-web.appspot.com/images/animal1.svg" title="1" subtitle="A"></list-item-value1>
