--- a/railguns/developer/templates/developer_index.html
+++ b/railguns/developer/templates/developer_index.html
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="keywords" content="">
-<meta name="description" content="">
-<meta name="author" content="">
-<meta name="robots" content="none">
-<title>{{ title }}</title>
-</head>
-<body>
-    <a href="documentation/#/api">API</a>
-    <br>
-    <a href="http://git.cmcaifu.com/cmcaifu/M/wikis/home">Wiki</a>
-    <br>
-    <a href="downloads/models.zip">下载客户端模型类</a>
-</body>
-</html>
+{% extends 'railguns/mdc/detail.html' %}
+{% load static %}
+
+{% block left_bar_item %}<a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>{% endblock %}
+
+{% block drawer %}{% include 'includes/drawer.html' %}{% endblock %}
+
+{% block content %}
+<div class="content-block">
+    <div class="content-block-inner">
+        <a href="/docs/">API</a>
+        <br>
+        <a href="http://git.cmcaifu.com/cmcaifu/M/wikis/home">Wiki</a>
+        <br>
+        <a href="downloads/models.zip">下载客户端模型类</a>
+    </div>
+</div>
+{% endblock %}
