--- a/railguns/templates/railguns/mdc/grouped_table_detail.html
+++ b/railguns/templates/railguns/mdc/grouped_table_detail.html
@@ -3,12 +3,12 @@
 {% endblock %}
 
 {% block content %}<div class="mdc-list-group" style="margin: 0 auto; max-width: 600px;">
-            {% block items %}<h3 class="mdc-list-group__subheader">&#xA0;</h3>
+            {% block items %}<list-section-header></list-section-header>
             <ul class="mdc-list mdc-list--avatar-list">
                 <list-item-value1 icon="https://material-components-web.appspot.com/images/animal3.svg" title="id" :subtitle="data.id"></list-item-value1>
             </ul>
             <list-divider></list-divider>
-            <h3 class="mdc-list-group__subheader">List 2</h3>
+            <list-section-header title="List 2"></list-section-header>
             <ul class="mdc-list mdc-list--avatar-list">
                 <list-item-value1 icon="https://material-components-web.appspot.com/images/animal1.svg" title="1" subtitle="A"></list-item-value1>
                 <li role="separator" class="mdc-list-divider mdc-list-divider--inset"></li>
