--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -6,18 +6,20 @@
 {% endblock %}
 
 {% block web %}
-    <!-- 🍺 css 开始 -->{% block css %}{% endblock %}
+    <!-- 🍺 css 开始 -->{% block css %}
+    <!-- 💙 base_quick -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css">{% endblock %}
     <!-- 🍻 css 结束 -->
 </head>
 
-<body class="mdc-typography">
+<body>
     <!-- 🍺 内容 开始 -->{% block body %}{% endblock %}
     <!-- 🍻 内容 结束 -->
 
     <!-- 🍺 js 开始 -->{% block js %}
     <!-- 💙 base_quick -->
     <!-- Django -->
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdn.bootcss.com/js-cookie/latest/js.cookie.min.js"></script>
     <script src="{% static 'railguns/js/django.js' %}"></script>
     <!-- Vendor -->
