--- a/railguns/templates/railguns/mdc/form/check_list_update.html
+++ b/railguns/templates/railguns/mdc/form/check_list_update.html
@@ -6,7 +6,7 @@
 {% block menu %}<!-- <menu-item icon="done" title="done"></menu-item> -->{% endblock %}
 
 {% block items %}
-            <h3 class="mdc-list-group__subheader">&#xA0;</h3>
+            <list-section-header></list-section-header>
             <list-divider></list-divider>
             <ul class="mdc-list">
                 <list-item-default v-for="item in items" :key="item.value"
