--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -19,10 +19,11 @@
     <!-- 🍺 js 开始 -->{% block js %}
     <!-- 💙 base_quick -->
     <!-- Django -->
-    <script src="https://cdn.bootcss.com/babel-polyfill/7.0.0-beta.46/polyfill.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/js-cookie/latest/js.cookie.min.js"></script>
-    <script src="{% static 'railguns/js/django.js' %}"></script>
+    <script src="https://cdn.bootcss.com/babel-polyfill/6.26.0/polyfill.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
+{#    <script src="https://cdn.bootcss.com/js-cookie/latest/js.cookie.min.js"></script>#}
+    <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment-with-locales.min.js"></script>
+{#    <script src="{% static 'railguns/js/django.js' %}"></script>#}
     <!-- Vendor -->
     {% if debug %}
         <script src="{% static 'vendor/vue.js' %}"></script>
