--- a/railguns/templates/railguns/mdc/form/check_list_update.html
+++ b/railguns/templates/railguns/mdc/form/check_list_update.html
@@ -1,23 +1,20 @@
-{% extends '../grouped_table_detail.html' %}
+{% extends '../detail.html' %}
 {% load static %}
 {% block structure %}{{ block.super }}<!--           mdc/form/check_list_update -->
 {% endblock %}
 
 {% block menu %}<!-- <menu-item icon="done" title="done"></menu-item> -->{% endblock %}
 
-{% block items %}
-            <list-section-header></list-section-header>
-            <list-divider></list-divider>
-            <ul class="mdc-list">
-                <list-item-default v-for="item in items" :key="item.value"
+{% block content %}
+            <table-list-section>
+                <list-item-default slot="item" v-for="item in items" :key="item.value"
                     :title="item.label"
                     accessory="radio_button_unchecked"
                     :datavalue="item.value"></list-item-default>
-            </ul>
-            <list-divider></list-divider>
-            <ul class="mdc-list">
-                <input @click="patch" type="submit" value="提交">
-            </ul>{% endblock %}
+            </table-list-section>
+            <table-list-section>
+                <input slot="item" @click="patch" type="submit" value="提交">
+            </table-list-section>{% endblock %}
 
 {% block framework_js %}<!-- 💙 mdc/form/check_list_update -->
     <script src="{% static 'railguns/js/vue/update.js' %}"></script>
