--- a/railguns/templates/railguns/vue/list.html
+++ b/railguns/templates/railguns/vue/list.html
@@ -3,6 +3,7 @@
 {% block structure %}{{ block.super }}<!--       vue/list -->
 {% endblock %}
 
-{% block framework_js %}<!-- 💙 vue/list -->
+{% block js %}{{ block.super }}
+    <!-- 💙 vue/list -->
     <script src="{% static 'railguns/js/vue/list.js' %}"></script>
-{% endblock %}
+    <!-- 💛 自定义 js -->{% endblock %}
