--- a/railguns/templates/railguns/vue/base.html
+++ b/railguns/templates/railguns/vue/base.html
@@ -34,6 +34,4 @@
 {#    </script>#}
     <script src="{% static 'railguns/js/vue/weui-components.js' %}"></script>
     <script src="{% static 'railguns/js/vue/common.js' %}"></script>
-    {% block framework_js %}{% endblock %}
-    <script src="{% static 'railguns/js/mdc/common.js' %}"></script>
-    <!-- 💛 自定义 js -->{% endblock %}
+    <script src="{% static 'railguns/js/mdc/common.js' %}"></script>{% endblock %}
