--- a/railguns/templates/railguns/vue/form/check_list_update.html
+++ b/railguns/templates/railguns/vue/form/check_list_update.html
@@ -1,4 +1,4 @@
-{% extends '../detail.html' %}
+{% extends '../base.html' %}
 {% load static %}
 {% block structure %}{{ block.super }}<!--           vue/form/check_list_update -->
 {% endblock %}
@@ -16,6 +16,7 @@
                 <input slot="item" @click="patch" type="submit" value="提交">
             </table-list-section>{% endblock %}
 
-{% block framework_js %}<!-- 💙 vue/form/check_list_update -->
+{% block js %}{{ block.super }}
+    <!-- 💙 vue/form/check_list_update -->
     <script src="{% static 'railguns/js/vue/update.js' %}"></script>
-{% endblock %}
+    <!-- 💛 自定义 js -->{% endblock %}
