--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -18,21 +18,15 @@
 
     <!-- 🍺 js 开始 -->{% block js %}
     <!-- 💙 base_quick -->
-    <!-- Django -->
+    <!-- Vendor -->
     <script src="https://cdn.bootcss.com/babel-polyfill/6.26.0/polyfill.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment-with-locales.min.js"></script>
-{#    <script src="https://cdn.bootcss.com/js-cookie/latest/js.cookie.min.js"></script>#}
-{#    <script src="{% static 'railguns/js/django.js' %}"></script>#}
-    <!-- Vendor -->
-    {% if debug %}
-        <script src="{% static 'vendor/vue.js' %}"></script>
-        <script src="{% static 'vendor/axios.js' %}"></script>
-    {% else %}
-        <script src="{% static 'vendor/vue.min.js' %}"></script>
-        <script src="{% static 'vendor/axios.min.js' %}"></script>
-    {% endif %}
+{% if debug %}    <script src="{% static 'vendor/vue.js' %}"></script>
+    <script src="{% static 'vendor/axios.js' %}"></script>{% else %}
+    <script src="{% static 'vendor/vue.min.js' %}"></script>
+    <script src="{% static 'vendor/axios.min.js' %}"></script>{% endif %}
     <script src="{% static 'railguns/js/vendor.js' %}"></script>
     {% endblock %}
     <!-- 🍻 js 结束 -->
