--- a/railguns/templates/railguns/mdc/base.html
+++ b/railguns/templates/railguns/mdc/base.html
@@ -45,8 +45,8 @@
 {#        document.body.classList.add('mdc-typography')#}
 {#        window.mdc.autoInit()#}
 {#    </script>#}
+    <script src="{% static 'railguns/js/service.js' %}"></script>
     <script src="{% static 'railguns/js/vue/weui-components.js' %}"></script>
-    <script src="{% static 'railguns/js/vue/common.js' %}"></script>
     {% block framework_js %}{% endblock %}
     <script src="{% static 'railguns/js/mdc/common.js' %}"></script>
     <!-- 💛 自定义 js -->{% endblock %}
