--- a/railguns/templates/railguns/vue/base.html
+++ b/railguns/templates/railguns/vue/base.html
@@ -21,5 +21,5 @@
 {% endblock %}
 
 {% block js %}{{ block.super }}<!-- 💙 vue/base -->
-    <script src="{% static 'railguns/js/vue/weui-components.js' %}"></script>
-    <script src="{% static 'railguns/js/vue/common.js' %}"></script>{% endblock %}
+    <script src="{% static 'railguns/js/service.js' %}"></script>
+    <script src="{% static 'railguns/js/vue/weui-components.js' %}"></script>{% endblock %}
