--- a/railguns/templates/railguns/vue/base.html
+++ b/railguns/templates/railguns/vue/base.html
@@ -17,6 +17,7 @@
     <!-- main 区域 -->
     <main data-endpoint="{{ endpoint }}" id="content">
         {% block content %}{% endblock %}
+        <alert title="提示"></alert>
     </main>
 {% endblock %}
 
