--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -28,6 +28,8 @@
     <script src="{% static 'vendor/vue.min.js' %}"></script>
     <script src="{% static 'vendor/axios.min.js' %}"></script>{% endif %}
     <script src="{% static 'railguns/js/vendor.js' %}"></script>
+    <script src="{% static 'railguns/js/vue/mixins.js' %}"></script>
+    <script src="{% static 'js/components.js' %}"></script>
     {% endblock %}
     <!-- 🍻 js 结束 -->
 {% endblock %}
