--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -11,7 +11,7 @@
     <!-- analytics -->
 {% include 'includes/analytics.html' %}
     {% block title %}<title>{{ title }}</title>{% endblock %}
-    <link rel="icon" href="{% static 'favicon.ico' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
     <!-- 🌐 web 开始 -->
 {% block web %}{% endblock %}
     <!-- 🌐 web 结束 -->
