--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -23,6 +23,8 @@
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment-with-locales.min.js"></script>
+    <script src="https://cdn.bootcss.com/numeral.js/2.0.6/numeral.min.js"></script>
+    <script src="https://cdn.bootcss.com/numeral.js/2.0.6/locales.min.js"></script>
 {% if debug %}    <script src="{% static 'vendor/vue.js' %}"></script>
     <script src="{% static 'vendor/axios.js' %}"></script>{% else %}
     <script src="{% static 'vendor/vue.min.js' %}"></script>
