--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -19,10 +19,10 @@
     <!-- 🍺 js 开始 -->{% block js %}
     <!-- 💙 base_quick -->
     <!-- Vendor -->
-    <script src="https://cdn.bootcss.com/babel-polyfill/6.26.0/polyfill.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.0.0/polyfill.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.22.1/moment-with-locales.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.22.2/moment-with-locales.min.js"></script>
     <script src="https://cdn.bootcss.com/numeral.js/2.0.6/numeral.min.js"></script>
     <script src="https://cdn.bootcss.com/numeral.js/2.0.6/locales.min.js"></script>
 {% if debug %}    <script src="{% static 'vendor/vue.js' %}"></script>
