--- a/railguns/templates/railguns/mdc/base.html
+++ b/railguns/templates/railguns/mdc/base.html
@@ -22,8 +22,8 @@
 {#    {% block app_bar %}<header class="mdc-top-app-bar mdc-top-app-bar--fixed" id="app_bar">#}
 {#        <div class="mdc-top-app-bar__row">#}
 {#            <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">#}
-{#                {% block left_bar_item %}<!-- http://www.w3school.com.cn/js/js_window_history.asp -->#}
-{#                <!-- https://stackoverflow.com/questions/14815838/webkit-chrome-history-back-1-onclick-vs-href -->#}
+{#                {% block left_bar_item %}<!-- https://www.w3school.com.cn/js/js_window_history.asp -->#}
+{#                <!-- SO: https://stackoverflow.com/questions/14815838/webkit-chrome-history-back-1-onclick-vs-href -->#}
 {#                <a href="#" onclick="history.back();return false;" class="mdc-top-app-bar__navigation-icon"><i class="material-icons">&#xE5C4;</i></a>{% endblock %}#}
 {#                <span class="mdc-top-app-bar__title">{{ title }}</span>#}
 {#            </section>#}
