--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -8,7 +8,7 @@
 {% block web %}
     <!-- 🍺 css 开始 -->{% block css %}
     <!-- 💙 base_quick -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css">{% endblock %}
+    <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css">{% endblock %}
     <!-- 🍻 css 结束 -->
 </head>
 
@@ -19,10 +19,10 @@
     <!-- 🍺 js 开始 -->{% block js %}
     <!-- 💙 base_quick -->
     <!-- Vendor -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.0.0/polyfill.min.js"></script>
+    <script src="https://cdn.bootcss.com/babel-polyfill/7.2.5/polyfill.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.22.2/moment-with-locales.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery.lazy/1.7.10/jquery.lazy.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.23.0/moment-with-locales.min.js"></script>
     <script src="https://cdn.bootcss.com/numeral.js/2.0.6/numeral.min.js"></script>
     <script src="https://cdn.bootcss.com/numeral.js/2.0.6/locales.min.js"></script>
 {% if debug %}    <script src="{% static 'vendor/vue.js' %}"></script>
