--- a/railguns/templates/railguns/mdc/form/create.html
+++ b/railguns/templates/railguns/mdc/form/create.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block framework_js %}<!-- 💙 mdc/form/create -->
-    <script src="{% static 'railguns/js/vue/create.js' %}"></script>
+    <script src="{% static 'railguns/es2015/ui/create.js' %}"></script>
     <script>
         (function() {
             var tfs = document.querySelectorAll('.mdc-text-field:not([data-demo-no-auto-js])');
