--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -29,8 +29,8 @@
     <script src="{% static 'vendor/axios.js' %}"></script>{% else %}
     <script src="{% static 'vendor/vue.min.js' %}"></script>
     <script src="{% static 'vendor/axios.min.js' %}"></script>{% endif %}
-    <script src="{% static 'railguns/es2015/vendor.js' %}"></script>
-    <script src="{% static 'railguns/es2015/ui/mixins.js' %}"></script>
+    <script src="{% static 'railguns/js/vendor.js' %}"></script>
+    <script src="{% static 'railguns/js/vue/mixins.js' %}"></script>
     <script src="{% static 'js/components.js' %}"></script>
     {% endblock %}
     <!-- 🍻 js 结束 -->
