--- a/railguns/templates/railguns/mdc/list.html
+++ b/railguns/templates/railguns/mdc/list.html
@@ -4,5 +4,5 @@
 {% endblock %}
 
 {% block framework_js %}<!-- 💙 mdc/list -->
-    <script src="{% static 'railguns/es2015/ui/list.js' %}"></script>
+    <script src="{% static 'railguns/js/vue/list.js' %}"></script>
 {% endblock %}
